add ability to create chat
